// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CasesTable component should display deleted case notes for admin users 1`] = `
<DocumentFragment>
  <table
    class="govuk-table"
  >
    <thead
      class="govuk-table__head"
    >
      <tr
        class="govuk-table__row"
      >
        <th
          class="govuk-table__header"
          scope="col"
        >
          Date created 
        </th>
        <th
          class="govuk-table__header"
          scope="col"
        >
          Record type 
        </th>
        <th
          class="govuk-table__header"
          scope="col"
        >
          Created by 
        </th>
        <th
          class="govuk-table__header"
          scope="col"
        >
          Action 
        </th>
      </tr>
    </thead>
    <tbody
      class="govuk-table__body"
    >
      <tr
        class="govuk-table__row"
      >
        <td
          class="govuk-table__cell govuk--timestamp"
          style="width: 120px;"
        >
          25 Oct 2020
        </td>
        <td
          class="govuk-table__cell"
        >
          foorm 
        </td>
        <td
          class="govuk-table__cell"
        >
          Fname.Lname@hackney.gov.uk
        </td>
        <td
          class="govuk-table__cell govuk-table__cell--numeric"
          style="width: 50px; text-align: center;"
        >
          <a
            class="lbh-link"
            href="https://foo.bar"
            rel="noreferrer noopener"
            target="_blank"
          >
            View
          </a>
        </td>
      </tr>
      <tr
        class="govuk-table__row"
      >
        <td
          class="govuk-table__cell govuk--timestamp"
          style="width: 120px;"
        >
          25 Oct 2020
        </td>
        <td
          class="govuk-table__cell"
        >
          Worker allocated 
        </td>
        <td
          class="govuk-table__cell"
        >
          Fname.Lname@hackney.gov.uk
        </td>
        <td
          class="govuk-table__cell govuk-table__cell--numeric"
          style="width: 50px; text-align: center;"
        >
          <a
            class="lbh-link"
            href="/people/123/allocations/321?recordId=2"
          >
            View
          </a>
        </td>
      </tr>
      <tr
        class="govuk-table__row"
      >
        <td
          class="govuk-table__cell govuk--timestamp"
          style="width: 120px;"
        >
          25 Oct 2020
        </td>
        <td
          class="govuk-table__cell"
        >
          Case note: foorm 
          <br />
          <p
            class="lbh-body-s govuk-!-margin-top-2"
          >
            i am a case title
          </p>
        </td>
        <td
          class="govuk-table__cell"
        >
          Fname.Lname@hackney.gov.uk
        </td>
        <td
          class="govuk-table__cell govuk-table__cell--numeric"
          style="width: 50px; text-align: center;"
        >
          <a
            class="lbh-link"
            href="/people/123/records/4"
          >
            View
          </a>
        </td>
      </tr>
      <tr
        class="govuk-table__row"
      >
        <td
          class="govuk-table__cell govuk--timestamp"
          style="width: 120px;"
        >
          25 Oct 2020
        </td>
        <td
          class="govuk-table__cell"
        >
          Case note: adult-case-note (deleted)
          <br />
          <p
            class="lbh-body-s govuk-!-margin-top-2"
          >
            i am a case title
          </p>
        </td>
        <td
          class="govuk-table__cell"
        >
          Fname.Lname@hackney.gov.uk
        </td>
        <td
          class="govuk-table__cell govuk-table__cell--numeric"
          style="width: 50px; text-align: center;"
        >
          <a
            class="lbh-link"
            href="/people/123/records/5"
          >
            View
          </a>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`CasesTable component should not display deleted case notes for non admin users 1`] = `
<DocumentFragment>
  <table
    class="govuk-table"
  >
    <thead
      class="govuk-table__head"
    >
      <tr
        class="govuk-table__row"
      >
        <th
          class="govuk-table__header"
          scope="col"
        >
          Date created 
        </th>
        <th
          class="govuk-table__header"
          scope="col"
        >
          Record type 
        </th>
        <th
          class="govuk-table__header"
          scope="col"
        >
          Created by 
        </th>
        <th
          class="govuk-table__header"
          scope="col"
        >
          Action 
        </th>
      </tr>
    </thead>
    <tbody
      class="govuk-table__body"
    >
      <tr
        class="govuk-table__row"
      >
        <td
          class="govuk-table__cell govuk--timestamp"
          style="width: 120px;"
        >
          25 Oct 2020
        </td>
        <td
          class="govuk-table__cell"
        >
          foorm 
        </td>
        <td
          class="govuk-table__cell"
        >
          Fname.Lname@hackney.gov.uk
        </td>
        <td
          class="govuk-table__cell govuk-table__cell--numeric"
          style="width: 50px; text-align: center;"
        >
          <a
            class="lbh-link"
            href="https://foo.bar"
            rel="noreferrer noopener"
            target="_blank"
          >
            View
          </a>
        </td>
      </tr>
      <tr
        class="govuk-table__row"
      >
        <td
          class="govuk-table__cell govuk--timestamp"
          style="width: 120px;"
        >
          25 Oct 2020
        </td>
        <td
          class="govuk-table__cell"
        >
          Worker allocated 
        </td>
        <td
          class="govuk-table__cell"
        >
          Fname.Lname@hackney.gov.uk
        </td>
        <td
          class="govuk-table__cell govuk-table__cell--numeric"
          style="width: 50px; text-align: center;"
        >
          <a
            class="lbh-link"
            href="/people/123/allocations/321?recordId=2"
          >
            View
          </a>
        </td>
      </tr>
      <tr
        class="govuk-table__row"
      >
        <td
          class="govuk-table__cell govuk--timestamp"
          style="width: 120px;"
        >
          25 Oct 2020
        </td>
        <td
          class="govuk-table__cell"
        >
          Case note: foorm 
          <br />
          <p
            class="lbh-body-s govuk-!-margin-top-2"
          >
            i am a case title
          </p>
        </td>
        <td
          class="govuk-table__cell"
        >
          Fname.Lname@hackney.gov.uk
        </td>
        <td
          class="govuk-table__cell govuk-table__cell--numeric"
          style="width: 50px; text-align: center;"
        >
          <a
            class="lbh-link"
            href="/people/123/records/4"
          >
            View
          </a>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`CasesTable component should render properly 1`] = `
<DocumentFragment>
  <table
    class="govuk-table"
  >
    <thead
      class="govuk-table__head"
    >
      <tr
        class="govuk-table__row"
      >
        <th
          class="govuk-table__header"
          scope="col"
        >
          Date created 
        </th>
        <th
          class="govuk-table__header"
          scope="col"
        >
          Record type 
        </th>
        <th
          class="govuk-table__header"
          scope="col"
        >
          Created by 
        </th>
        <th
          class="govuk-table__header"
          scope="col"
        >
          Action 
        </th>
      </tr>
    </thead>
    <tbody
      class="govuk-table__body"
    >
      <tr
        class="govuk-table__row"
      >
        <td
          class="govuk-table__cell govuk--timestamp"
          style="width: 120px;"
        >
          25 Oct 2020
        </td>
        <td
          class="govuk-table__cell"
        >
          foorm 
        </td>
        <td
          class="govuk-table__cell"
        >
          Fname.Lname@hackney.gov.uk
        </td>
        <td
          class="govuk-table__cell govuk-table__cell--numeric"
          style="width: 50px; text-align: center;"
        >
          <a
            class="lbh-link"
            href="https://foo.bar"
            rel="noreferrer noopener"
            target="_blank"
          >
            View
          </a>
        </td>
      </tr>
      <tr
        class="govuk-table__row"
      >
        <td
          class="govuk-table__cell govuk--timestamp"
          style="width: 120px;"
        >
          25 Oct 2020
        </td>
        <td
          class="govuk-table__cell"
        >
          Worker allocated 
        </td>
        <td
          class="govuk-table__cell"
        >
          Fname.Lname@hackney.gov.uk
        </td>
        <td
          class="govuk-table__cell govuk-table__cell--numeric"
          style="width: 50px; text-align: center;"
        >
          <a
            class="lbh-link"
            href="/people/123/allocations/321?recordId=2"
          >
            View
          </a>
        </td>
      </tr>
      <tr
        class="govuk-table__row"
      >
        <td
          class="govuk-table__cell govuk--timestamp"
          style="width: 120px;"
        >
          25 Oct 2020
        </td>
        <td
          class="govuk-table__cell"
        >
          Case note: foorm 
          <br />
          <p
            class="lbh-body-s govuk-!-margin-top-2"
          >
            i am a case title
          </p>
        </td>
        <td
          class="govuk-table__cell"
        >
          Fname.Lname@hackney.gov.uk
        </td>
        <td
          class="govuk-table__cell govuk-table__cell--numeric"
          style="width: 50px; text-align: center;"
        >
          <a
            class="lbh-link"
            href="/people/123/records/4"
          >
            View
          </a>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;
